manifest/app/overlay/prod/infra/delete-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: service
$patch: delete
